# LabLenguajes

Prolog/: README.md  academico.pl  prelaciones.pl
Proyecto1/: .gitignore  Proyecto1.cabal  README.md  Setup.hs
Proyecto1/Data/: mundo.txt
Proyecto1/src/: Main.hs
Proyecto1/src/Engine/: Core.hs  Parser.hs  Persistence.hs  Types.hs
Proyecto3/: RPTLS.rb  main.rb  test_shoes.rb
base_tarea1/src/: Makefile  Tarea1.hs  Test.hs
base_tarea1/src/output/: Main.hi  Tarea1.hi
