cabal-version:       2.2

name:                Proyecto1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Proyecto1#readme
license:             BSD-3-Clause
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                    --  CHANGELOG.md

executable Proyecto1
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Engine.Types
      Engine.Parser
      Engine.Core
      Engine.Persistence
  build-depends:
      base >=4.7 && <5,
      containers,
      split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Proyecto1
